@@ -3,6 +3,7 @@
 * Minor enhancement
   * Should not add namespace to typedef of template in namespace.
   * Should check doxygen header versions.
+  * Should create cast for unresolved templated parents.
 
 == 2.0.0 2012-01-21
 * Complete rewrite in Lua
